Popup z-index fix

--- a/src/scss/unsorted.scss
+++ b/src/scss/unsorted.scss
@@ -1194,7 +1194,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 50;
+    z-index: $navbar-z-index + 100;
     overflow: auto;
     display: none;
 }
